# geociv

./: .env  .gitignore  README.md  alembic.ini  package-lock.json  pyproject.toml  requirements.txt  test.py
alembic/: env.py
alembic/versions/: 2243ee8e39aa_add_session_ledger_table.py  3a4b5c6d7e8f_add_promotion_cache_and_agent_overrides.py  8798134dd62e_add_polygon_and_ai_label_to_clusters.py
app/: __init__.py  config.py  database.py  logging_config.py  main.py  seed_data.py
app/agents/: __init__.py  aggregator.py  definitions.py  interpreter.py  reactor.py  session_manager.py  townhall.py
app/engine/: __init__.py  archetypes.py  exposure.py  metrics.py  personas.py  simulator.py
app/models/: __init__.py  scenario.py  simulation.py
app/routers/: __init__.py  ai.py  ai_chat.py  cache.py  observability.py  proposals.py  scenarios.py  simulate.py
app/schemas/: __init__.py  ai.py  llm.py  multi_agent.py  proposal.py  scenario.py  simulation.py
app/services/: __init__.py  backboard.py  backboard_client.py  clarifier.py  history_intelligence.py  ledger.py  llm_metrics.py  narrator.py  objective_seeker.py  simulation_job.py  townhall_generator.py  variant_generator.py  zone_describer.py
docs/: LLM_METRICS.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
landing-page-fix/: package.json
landing-page-fix/app/: layout.tsx  (+2 more)
logs/: llm_metrics.jsonl
scripts/: __init__.py  demo.py  seed_kingston.py  test_llm_metrics.py
tests/: __init__.py  test_api.py  test_engine.py
(+64 files in other folders)
